--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,9 @@
 AC_INIT(ltmain.sh.in)
-AM_INIT_AUTOMAKE(libtool, 0.6b)
+AM_INIT_AUTOMAKE(libtool, 0.6c)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
 
-AC_OUTPUT([Makefile doc/Makefile])
+AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
