*** empty log message ***

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = gnits
 SUBDIRS = doc tests
 
 # Distribute ltconfig and ltmain.sh so that the demo directory works.
-EXTRA_DIST = libtool.m4 libtoolize.in ltconfig ltconfig.in \
+EXTRA_DIST = PLATFORMS libtool.m4 libtoolize.in ltconfig ltconfig.in \
 	ltmain.sh ltmain.sh.in README-automake
 CLEANFILES = libtool libtoolize
 MAINTAINERCLEANFILES = ltconfig ltmain.sh
