--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,11 @@
 AC_INIT(ltmain.sh.in)
-AM_INIT_AUTOMAKE(libtool, 0.7)
+AM_INIT_AUTOMAKE(libtool, 0.7a)
 
 pkgdatadir='${datadir}/libtool'
 AC_SUBST(pkgdatadir)
 aclocaldir='${datadir}/aclocal'
 AC_SUBST(aclocaldir)
+localedir='${datadir}/locale'
+AC_SUBST(localedir)
 
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
