--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -1,7 +1,7 @@
 # A brief demonstration of using Automake with Libtool.
 AUTOMAKE_OPTIONS = ansi2knr foreign
 
-EXTRA_DIST = $(TESTS)
+EXTRA_DIST = $(TESTS) acinclude.m4
 
 # Build a libtool library, libhell.la for installation in libdir.
 lib_PROGRAMS = libhell.la
@@ -10,13 +10,20 @@ libhell_la_LDFLAGS = -version-info 3:12:1 -rpath $(libdir)
 
 include_HEADERS = foo.h
 
+bin_PROGRAMS = hell hell.static
+
 # Build hell from main.c and libhell.la
-bin_PROGRAMS = hell
 hell_SOURCES = main.c
 hell_LDADD = libhell.la
 
+# Create a statically-linked version of hell.
+hell_static_SOURCES = main.c
+hell_static_LDADD = libhell.la
+hell_static_LDFLAGS = -static
+
 TESTS = run.test
 
-# Regenerate the acinclude.m4 from the parent, if it doesn't exist.
-$(top_srcdir)/acinclude.m4:
-	ln -s $(top_srcdir)/../libtool.m4 $(top_srcdir)/acinclude.m4
+# Regenerate our acinclude.m4 only if it doesn't exist.
+$(srcdir)/acinclude.m4:
+	rm -f $(srcdir)/acinclude.m4
+	ln -s ../libtool.m4 $(srcdir)/acinclude.m4
