--- a/demo/Makefile.am
+++ b/demo/Makefile.am
@@ -3,22 +3,22 @@ AUTOMAKE_OPTIONS = ansi2knr foreign
 
 EXTRA_DIST = $(TESTS) acinclude.m4
 
-# Build a libtool library, libhell.la for installation in libdir.
-lib_PROGRAMS = libhell.la
-libhell_la_SOURCES = hello.c foo.c
-libhell_la_LDFLAGS = -version-info 3:12:1 -rpath $(libdir)
+# Build a libtool library, libhello.la for installation in libdir.
+lib_PROGRAMS = libhello.la
+libhello_la_SOURCES = hello.c foo.c
+libhello_la_LDFLAGS = -version-info 3:12:1 -rpath $(libdir)
 
 include_HEADERS = foo.h
 
 bin_PROGRAMS = hell hell.static
 
-# Build hell from main.c and libhell.la
+# Build hell from main.c and libhello.la
 hell_SOURCES = main.c
-hell_LDADD = libhell.la
+hell_LDADD = libhello.la
 
 # Create a statically-linked version of hell.
 hell_static_SOURCES = main.c
-hell_static_LDADD = libhell.la
+hell_static_LDADD = libhello.la
 hell_static_LDFLAGS = -static
 
 TESTS = run.test
