--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,6 +2,7 @@
 
 AUTOMAKE_OPTIONS = gnits
 
-TESTS = demo.test test-e.test
+TESTS = demo-conf.test demo-make.test demo-exec.test demo-inst.test \
+	demo-unst.test link.test link-2.test test-e.test
 
-EXTRA_DIST = defs $(TESTS)
+EXTRA_DIST = defs tlibtool $(TESTS)
