--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,7 +3,8 @@
 AUTOMAKE_OPTIONS = gnits
 
 TESTS = demo-conf.test demo-make.test demo-exec.test demo-inst.test \
-	demo-unst.test link.test link-2.test suffix.test test-e.test
+	demo-unst.test hardcode.test link.test link-2.test suffix.test \
+	test-e.test
 
 EXTRA_DIST = defs tlibtool $(TESTS)
 
